--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <button id="startButton" style="background-color: greenyellow;"  onclick="start()">Start</button>
         <button style="background-color: rgba(255, 0, 0, 0.993);"  onclick="stop()">StoP</button>
         <button style="background-color: rgb(234, 255, 0);"   onclick="reset()">Reset</button>
+        <br>
+        <strong class="name">&copy; Hassan_Ali</strong>
     </div>
 </body>
 <script src="app.js"></script>
